Changing to more recent Java version only